[package]
authors = ["The Hyperledger Aries Contributors"]
edition = "2018"
exclude = [".gitignore"]
keywords = ["agents", "aries", "blockchain", "hyperledger"]
license = "Apache-2.0"
name = "aries-credx-framework-rs"
readme = "README.md"
version = "0.1.0"

[features]
default = []
bls381 = ["amcl_wrapper", "bigdecimal", "chrono", "num-bigint"]
rsa-native = ["bigdecimal", "chrono", "num-bigint", "openssl"]

[dependencies]
amcl_wrapper = {version = "0.3", features = ["bls381"], optional = true }
bigdecimal = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
num-bigint = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }