[package]
authors = ["The Hyperledger Aries Contributors"]
edition = "2018"
exclude = [".gitignore"]
keywords = ["agents", "aries", "blockchain", "hyperledger"]
license = "Apache-2.0"
name = "aries-credx-framework-rs"
readme = "README.md"
version = "0.1.0"

[features]
default = []
bls381 = ["amcl_wrapper"]
ffi = ["env_logger", "ffi-support", "log"]
rsa-native = ["openssl"]

[dependencies]
amcl_wrapper = {version = "0.3", features = ["bls381"], optional = true }
bigdecimal = "0.1"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.8"
env_logger = { version = "0.7.0", optional = true }
ffi-support = { version = "0.4", optional = true }
hex = "0.4"
log = { version = "0.4", optional = true }
miracl_amcl = { version = "3.2.5", optional = true }
num-bigint = "0.2"
openssl = { version = "0.10", optional = true }